firefox scrollbar fix

--- a/pages/alltickets/index.module.scss
+++ b/pages/alltickets/index.module.scss
@@ -42,6 +42,7 @@
 
 .ticketList {
     height: calc(100vh - 170px);
+    scrollbar-width: none;  
     overflow-y: scroll;
     background-color: rgb(26, 26, 26);
     padding: 5px;
