--- a/pages/projects/[projectId]/ticket/[ticketId]/index.module.scss
+++ b/pages/projects/[projectId]/ticket/[ticketId]/index.module.scss
@@ -4,6 +4,8 @@
     overflow: auto;
     margin-right: auto;
     border-radius: 5px;
+    scrollbar-width: none;  
+
     height: calc(100vh - 100px);
     margin-top: 20px;
     background-color: rgb(0, 0, 0);
